# haiku-helloworld

./: .editorconfig  .gitignore  AboutHaiku.md  CMakeLists.txt  README.md  Tab4Links.md  astylerc_haiku  compile_flags.txt  create_dot_ccls.rb  dot_ccls  haiku-helloworld.pld  includePath_part.json  tab4links.rb
src/: ButtonView.cpp  ButtonView.h  ClockView.cpp  ClockView.h  ClockworkWaveApp.cpp  ClockworkWaveApp.h  HelloWorld.cpp  KGCircle.cpp  KGCircle.h  Main.cpp  RegularWindow.cpp  RegularWindow.h  SimpleApp.cpp  SimpleApp.h  SimpleView.cpp  SimpleView.h  SimpleWindow.cpp  SimpleWindow.h  TimeKeeper.cpp  TimeKeeper.h  TimedView.cpp  TimedView.h  Utils.cpp  Utils.h  WaveView.cpp  WaveView.h
